--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "slug": "^3.5.1",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
