--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@ yarn-error.log*
 lerna-debug.log*
 package-lock.json
 
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # OS
 .DS_Store
 
