update configurations and remove unnecessary imports

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DATABASE_PORT=DATABASE_PORT_NUMBER_GOES_HERE
 DATABASE_USER=DATABASE_USER_NAME_GOES_HERE
 DATABASE_PASSWORD=DATABASE_PASSWORD_GOES_HERE
 DATABASE_DB_NAME=DATABASE_DB_NAME_GOES_HERE
+
+JWT_SECRET_KEY=YOUR_JWT_SECRET_KEY_GOES_HERE
+JWT_EXPIRES_IN=NUMBER_IN_SEC_GOES_HERE
